# SecOps

./: README.md
docker-audit/: README.md  docker-audit.ipynb
ps-scripts/: Get-Log-Archivation.md  Get-RandomPassphrase.ps1  Get-ShadowAdmin-Analysis-Ext.md  Get-ShadowAdmin-Analysis-Ext.ps1  Get-ShadowAdmin-Analysis.md  Get-ShadowAdmin-Analysis.ps1  Unprotect-FolderContent.ps1
py-scripts/: pyproject.toml
py-scripts/cve-explorer/: .env-examplle  README.md  cve-explorer.py
